--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Tailor-Made Websites UK </title>
+  <title>Tailor-Made Websites | Web and Mobile app development company in UK London</title>
   <meta name="title" content="Tailor-Made Websites UK">
-  <meta name= "description" content= "Web & App Development Company">
+  <meta name= "description" content= "We build websites and mobile apps. We are based in London UK">
   <meta name="robots" content= "index, follow"> 
+  <meta name="author" content="Jermaine Wilson">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Web & App Development Services | London Based | Tailor Made Website">
   <meta property="og:description" content="Websites built Tailor Made to your business">
@@ -55,18 +56,6 @@
   <link rel="preload" as="image" href="img/hero-slide-3.jpg">
 
 
-  <!-- Meta Description-->
-  <meta name= "description content"= Professional & User Friendly websites built using HTML5, CSS & JAVASCRIPT at Affordable rates./>
-  <meta name=”robots” content=”index, follow”> 
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Web Development Services | London Based Web Developer| Tailor Made Website" />
-  <meta property="og:description" content=" We build websites using HTML5, CSS & Javascript" />
-  <meta property="og:image" content="https://tailor-madewebsites.co.uk/" />
-  <meta property="og:url" content="https://tailor-madewebsites.co.uk" />
-  <meta property="og:site_name" content="Tailor Made Websites" />
-  <meta name="twitter:card" content="summary_large_image">  
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- Meta Description End -->
 
 
 
