--- a/freelancer.html
+++ b/freelancer.html
@@ -9,10 +9,11 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Freelancer</title>
+  <title>Freelancer | Tailor-Made Websites | Web and Mobile app development company in UK London</title>
   <meta name="title" content="Tailor-Made Websites UK">
-  <meta name= "description" content= "Web & App Development Company">
+  <meta name= "description" content= "We build websites and mobile apps. We are based in London UK">
   <meta name="robots" content= "index, follow"> 
+  <meta name="author" content="Jermaine Wilson">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Web & App Development Services | London Based | Tailor Made Website">
   <meta property="og:description" content="Websites built Tailor Made to your business">
@@ -21,7 +22,6 @@
   <meta property="og:site_name" content="Tailor Made Websites">
   <meta name="twitter:card" content="summary_large_image">  
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
   <!-- 
     - favicon
   -->
