--- a/terms.html
+++ b/terms.html
@@ -15,9 +15,9 @@
   <meta name="robots" content= "index, follow"> 
   <meta name="author" content="Jermaine Wilson">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Web & App Development Services | London Based | Tailor Made Website">
+  <meta property="og:title" content="Web & App Development Services | London Based | Tailor Made Websites">
   <meta property="og:description" content="Websites built Tailor Made to your business">
-  <meta property="og:image" content="https://tailor-madewebsites.co.uk/">
+  <meta property="og:image" content="https://tailor-madewebsites.co.uk">
   <meta property="og:url" content="https://tailor-madewebsites.co.uk">
   <meta property="og:site_name" content="Tailor Made Websites">
   <meta name="twitter:card" content="summary_large_image">  
@@ -512,7 +512,7 @@
 
         <li>
           <address class="footer-text">
-            106a Norwood High Street, West Norwood, London, SE27 9NH 
+            86-90 Paul Street, London, England, United Kingdom, EC2A 4NE
           </address>
         </li>
 
@@ -521,7 +521,7 @@
         </li>
 
         <li>
-          <a href="tel:07412 771 031" class="footer-link">07412 771 031</a>
+          <a href="tel:" class="footer-link"></a>
         </li>
 
       </ul>
