--- a/privacy.html
+++ b/privacy.html
@@ -579,7 +579,7 @@
 
         <li>
           <address class="footer-text">
-            106a Norwood High Street, West Norwood, London, SE27 9NH 
+            86-90 Paul Street, London, England, United Kingdom, EC2A 4NE 
           </address>
         </li>
 
@@ -588,7 +588,7 @@
         </li>
 
         <li>
-          <a href="tel:07412 771 031" class="footer-link">07412 771 031</a>
+          <a href="tel:" class="footer-link"></a>
         </li>
 
       </ul>
